Added more items for css reset

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* style.css for admin_dashboard_project */
-* { // stylesheet reset
+* {
+  /* stylesheet reset */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
  }
+  font-family: Arial, san-serif;
+}
