--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@
  }
   font-family: Arial, san-serif;
 }
+
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 5fr;
+}
+
