--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- }
   font-family: Arial, san-serif;
 }
 
@@ -14,5 +13,15 @@
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 5fr;
+}
+
+.navBar {
+  background-color: #00aaff;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 900;
+  grid-column: 1/2;
+  grid-row: 1/3;
+  padding: 10px;
 }
 
