define navBar's images dimensions and appearance

--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@
   grid-template-rows: 1fr 5fr;
 }
 
+img {
+  width: 1.4em;
+  height: 1.4em;
+  filter: invert(1);
+}
+
 .navBar {
   background-color: #00aaff;
   color: white;
