--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img {
 }
 
 .navBar {
-  background-color: #00aaff;
+  background-color: #1992d4;
   color: white;
   font-size: 1.4rem;
   font-weight: 900;
