--- a/style.css
+++ b/style.css
@@ -25,11 +25,11 @@ img {
 .navBar {
   background-color: #1992d4;
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 900;
   grid-column: 1/2;
   grid-row: 1/3;
-  padding: 10px;
+  padding: 0.5em;
 }
 
 .navBar > div {
