--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ img {
   margin-right: 0.5em;
 }
 
+.navBar.home,
+.navBar.settings {
+  margin-top: 2em;
+}
+
   grid-column: 2/3;
   grid-row: 1/2;
   border: 1px solid MediumVioletRed;
