Defined grid positions for topBar and content of rightside

--- a/style.css
+++ b/style.css
@@ -77,13 +77,10 @@ img {
   );
 }
 
+.topBar {
   grid-row: 1/2;
-  border: 1px solid MediumVioletRed;
 }
 
 .content {
-  grid-column: 2/3;
-  grid-row: 2/6;
-  background-color: #e7e7e7;
-  border: 1px solid MediumVioletRed;
+  grid-row: 2/7;
 }
