--- a/style.css
+++ b/style.css
@@ -84,6 +84,13 @@ img {
   padding: 2em 2em;
 }
 
+.upper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
 .content {
   grid-row: 2/7;
 }
