--- a/style.css
+++ b/style.css
@@ -114,6 +114,13 @@ textarea {
   border: none;
 }
 
+.lower {
+  display: grid;
+  padding: 0.5em;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(8, 1fr);
+}
+
 .content {
   grid-row: 2/7;
 }
