--- a/style.css
+++ b/style.css
@@ -121,6 +121,15 @@ textarea {
   grid-template-columns: repeat(8, 1fr);
 }
 
+.lower > img {
+  grid-row: 1/3;
+  grid-column: 1/2;
+  margin-left: 1.3em;
+  margin-top: 0.5em;
+  height: 2.8em;
+  width: 2.8em;
+}
+
 .content {
   grid-row: 2/7;
 }
