--- a/style.css
+++ b/style.css
@@ -130,6 +130,14 @@ textarea {
   width: 2.8em;
 }
 
+.lower > .greetings {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  font-size: 0.8em;
+  font-weight: 900;
+  margin-top: 0.8em;
+}
+
 .content {
   grid-row: 2/7;
 }
