--- a/style.css
+++ b/style.css
@@ -138,6 +138,13 @@ textarea {
   margin-top: 0.8em;
 }
 
+.lower > .username {
+  grid-row: 2/3;
+  grid-column: 2/5;
+  font-size: 1.4em;
+  font-weight: 900;
+}
+
 .content {
   grid-row: 2/7;
 }
