--- a/style.css
+++ b/style.css
@@ -155,6 +155,22 @@ textarea {
   padding: 0.6em 0;
   border-radius: 2em;
 }
+
+.new.button {
+  grid-row: 1/3;
+  grid-column: 6/7;
+}
+
+.upload.button {
+  grid-row: 1/3;
+  grid-column: 7/8;
+}
+
+.share.button {
+  grid-row: 1/3;
+  grid-column: 8/9;
+}
+
 .content {
   grid-row: 2/7;
 }
