--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ img {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 0;
-  padding-left: 0;
+  /* margin-left: 0; */
+  /* padding-left: 0; */
 }
 
 .titleBar {
@@ -82,6 +82,7 @@ img {
   display: flex;
   flex-direction: column;
   padding: 2em 2em;
+  color: black;
 }
 
 .upper {
