--- a/style.css
+++ b/style.css
@@ -175,4 +175,9 @@ textarea {
 
 .content {
   grid-row: 2/7;
+  display: flex;
+  flex-direction: row;
+  color: black;
+  padding: 0.5em 0.5em;
 }
+
