--- a/style.css
+++ b/style.css
@@ -181,3 +181,10 @@ textarea {
   padding: 0.5em 0.5em;
 }
 
+.content.projectList {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 100%;
+}
+
