--- a/style.css
+++ b/style.css
@@ -202,3 +202,17 @@ p.rightside.title {
   grid-template-rows: repeat(9, 1fr);
 }
 
+.leftside.card {
+  margin: 1em 1em;
+  padding: 2em 2.5em;
+  font-size: 0.8rem;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  border-left: 1em solid #f0b429;
+  border-radius: 1em;
+  box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.8);
+}
+
