--- a/style.css
+++ b/style.css
@@ -232,3 +232,32 @@ p.rightside.title {
   width: 1.5em;
 }
 
+.leftside.content11 {
+  grid-column: 1/2;
+  grid-row: 1/4;
+}
+
+.leftside.content12 {
+  grid-column: 2/3;
+  grid-row: 1/4;
+}
+
+.leftside.content21 {
+  grid-column: 1/2;
+  grid-row: 4/7;
+}
+
+.leftside.content22 {
+  grid-column: 2/3;
+  grid-row: 4/7;
+}
+
+.leftside.content31 {
+  grid-column: 1/2;
+  grid-row: 7/10;
+}
+
+.leftside.content32 {
+  grid-column: 2/3;
+  grid-row: 7/10;
+}
