--- a/style.css
+++ b/style.css
@@ -283,6 +283,14 @@ p.rightside.title {
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.8);
 }
 
+.rightside.trending > .userRow {
+  display: grid;
+  grid-template-rows: repeat(2, 1.2em);
+  grid-template-columns: 3em 10em;
+  font-size: 0.8em;
+  margin: 1.5em 1em;
+}
+
 .rightside.subheading {
   font-weight: 900;
   font-size: 1rem;
