--- a/style.css
+++ b/style.css
@@ -291,6 +291,13 @@ p.rightside.title {
   margin: 1.5em 1em;
 }
 
+.userRow > img {
+  grid-row: 1/3;
+  grid-column: 1/2;
+  height: 2.7em;
+  width: 2.7em;
+}
+
 .rightside.subheading {
   font-weight: 900;
   font-size: 1rem;
