Placing the trending group to align with the announcements.

--- a/style.css
+++ b/style.css
@@ -283,6 +283,10 @@ p.rightside.title {
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.8);
 }
 
+.rightside.trending.group {
+  padding-left: 1.8em;
+}
+
 .rightside.trending > .userRow {
   display: grid;
   grid-template-rows: repeat(2, 1.2em);
